--- a/app/views/donate/edit.html.erb
+++ b/app/views/donate/edit.html.erb
@@ -36,6 +36,7 @@
                     <%= render(:partial => "donation_form", :locals => {:f => f}) %>
 
 
+                    
 
                     <br/><br/>
                     <button id="donation_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button"
@@ -62,7 +63,7 @@
                     <div class="panel panel-default panel-sidebar-1 visible-lg visible-md" id="merchantinfo">
                         <div class="wp-block default">
                         <div class="figure">
-                            <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@donation.charity.logo.url%>" class="img-responsive center-block"
+                            <img alt="" src="<%=@donation.charity.logo.url%>" class="img-responsive center-block"
                                             style="margin: auto auto; height: auto; width: auto; max-height:150px; max-width:200px;" 
                                             >     
                         </div>
