--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -124,16 +124,11 @@ if session[:partnersite] != true %>
                             </a>
                             
                             <ul class="dropdown-menu">
+                                <% if session[:roleid] == ADMIN_ROLE %>
+                                    <li><a tabindex="-1" href="/home/admin">Administration</a></li> 
+                                <% end %>
                                 <li><a tabindex="-1" href="/user/show/<%= session[:userid] %>">My Account</a></li>
 
-                                <% if session[:donationscount] != nil && session[:donationscount] > 0 && session[:roleid] == ADMIN_ROLE %>
-                                    <li><a tabindex="-1" href="/donate/index/?userid=<%= session[:userid]%>&viewall=true">View All Donations</a></li>
-                                <% end %>
-
-                                <% if session[:roleid] == ADMIN_ROLE %>
-                                    <li><a tabindex="-1" href="/giftcard/index/?viewall=true">View All Gift Cards</a></li>
-                                    <li><a tabindex="-1" href="/cause/index/?viewall=true">View All Causes</a></li>
-                                <% end %>
 
                                 <% if session[:donationscount] != nil && session[:donationscount] > 0 %>
                                     <li><a tabindex="-1" href="/donate/index/?userid=<%= session[:userid] %>">My Donations</a></li>
