--- a/app/views/account/show.html.erb
+++ b/app/views/account/show.html.erb
@@ -29,7 +29,7 @@
                                         <dl class="dl-horizontal style-2">
                                             <h3 class="title title-lg">Personal information</h3>
                                             
-                                            
+                                            <hr>
                                             <dt>Company Name</dt>
                                             <dd>
                                                 <span class="pull-left"><%= @account.company_name %></span>
@@ -39,6 +39,11 @@
                                             <dt>Company Website</dt>
                                             <dd>
                                             <span class="pull-left"><%= @account.company_url %></span>
+                                            </dd>
+                                            <hr>
+                                            <dt>API Key</dt>
+                                            <dd>
+                                            <span class="pull-left"><%= @account.api_key %></span>
                                                 
                                             </dd>
 
