--- a/app/views/home/admin.html.erb
+++ b/app/views/home/admin.html.erb
@@ -9,11 +9,11 @@
 		<br/>
 
 		<ul>
-			<li><a href="/account/index">View All Accounts</a></li>
-			<li><a href="/giftcard/index/?viewall=true">View All Gift Cards</a></li>
-        	<li><a href="/cause/index/?viewall=true">View All Causes</a></li>
-        	<li><a href="/donate/index/?userid=<%= session[:userid]%>&viewall=true">View All Donations</a></li>
-        	<li><a href="/user/index">View All Users</a></li>
+			<li><a href="/account/index">Manage Accounts</a></li>
+			<li><a href="/giftcard/index/?viewall=true">Manage Gift Cards</a></li>
+        	<li><a href="/cause/index/?viewall=true">Manage Causes</a></li>
+        	<li><a href="/donate/index/?userid=<%= session[:userid]%>&viewall=true">Manage Donations</a></li>
+        	<li><a href="/user/index">Manage Users</a></li>
         </ul>
 	</div>
 
