--- a/app/views/cause/show.html.erb
+++ b/app/views/cause/show.html.erb
@@ -16,7 +16,7 @@
                                    
                                 </div>
 
-
+<%# byebug %>
                                 <% if @cause.image1.exists? %>
                                 <div id="workCarousel" class="carousel carousel-4 slide color-two-l" data-ride="carousel">
                                     <!-- Indicators -->
@@ -88,8 +88,8 @@
                                     <p>
                                         <label style="text-decoration: underline;">Share this link with your friends</label>
 
-                                          <%= request.protocol + request.host_with_port + request.fullpath %>                            
-  <button class='my_clip_button' data-clipboard-target='fe_text' data-clipboard-text='<%= request.protocol + request.host_with_port + request.fullpath %>' id='d_clip_button' title='Click me to copy to clipboard.'>
+                                        <%= request.protocol + request.host_with_port + "/cause/show/" + @cause.to_param %>                                                    
+  <button class='my_clip_button' data-clipboard-target='fe_text' data-clipboard-text='<%= request.protocol + request.host_with_port + "/cause/show/" + @cause.to_param %>' id='d_clip_button' title='Click me to copy to clipboard.'>
     Copy
   </button>
   </p>
