--- a/app/views/cause/show.html.erb
+++ b/app/views/cause/show.html.erb
@@ -16,7 +16,7 @@
                                    
                                 </div>
 
-<%# byebug %>
+<% byebug %>
                                 <% if @cause.image1.exists? %>
                                 <div id="workCarousel" class="carousel carousel-4 slide color-two-l" data-ride="carousel">
                                     <!-- Indicators -->
