--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,25 @@
 
 <!-- Main Image --> 
 
-<div class="row">
-    <div class="col-md-6">
+<div class="row visible-sm visible-xs">
+    <div class="col-sm-9" style="text-align: center;">
 
-       
-        
-       <!-- <div id="socialshare" data-url="http://www.changefindr.com" data-text="Donate your partially and unused gift cards to causes at www.changefindr.com"></div> -->
-
+       <br/><br/>
+       <h3>Donate Your Partially-Used<br/>Gift Cards</h3>
+       <h5 style="color: #3498db;">Never let your gift cards go to waste!<br/>Donate your Partially-Used gift cards to your favorite cause <br/>and feel good about it.</h3>
+       <br/>
+       <a href="/cause/index" class="btn btn-base btn-lg ls-l">Donate</a>
+       <br/><br/>
+       <a href="/giftcard/new" class="btn btn-base btn-lg ls-l">Check Gift Card Balance</a>
+       <br/><br/>        
+    
+       <hr/>
     </div>
+
 </div>
 </section>
 <section id="slider-wrapper" class="layer-slider-wrapper layer-slider-dynamic">
-<div id="layerslider" style="width:100%;height:520px;"> 
+<div id="layerslider" style="width:100%;height:520px;" class="visible-lg visible-md"> 
     <!-- Slide 1 -->
     <div class="ls-slide">
         <!-- slide background -->
