--- a/app/views/giftcard/edit.html.erb
+++ b/app/views/giftcard/edit.html.erb
@@ -51,7 +51,7 @@
 			       		
 			    </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 visible-lg visible-md">
                     	<!-- SIDEBAR -->
                         <div class="sidebar">
                 
