--- a/app/views/giftcard/new.html.erb
+++ b/app/views/giftcard/new.html.erb
@@ -46,7 +46,7 @@
 			       		 
 			    </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 visible-lg visible-md">
                     	
 
                         <!-- SIDEBAR -->
